@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Key bindings for individual widgets.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>System.Object</BaseTypeName>
@@ -29,11 +29,12 @@
         <Parameter Name="evnt" Type="Gdk.EventKey" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Looks up key bindings for <paramref name="object"/> to find one matching
+	  <paramref name="event"/>, and if one was found, activates it.</summary>
         <param name="objekt">a <see cref="T:Gtk.Object" /></param>
         <param name="evnt">a <see cref="T:Gdk.EventKey" /></param>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -42,9 +43,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Public constructor.</summary>
         <returns>a <see cref="T:Gtk.Bindings" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
