@@ -514,9 +514,11 @@ public class ButtonApp  {
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>
+	  Whether the button grabs focus when it is clicked with the mouse.
+	</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Xalign">
@@ -527,9 +529,15 @@ public class ButtonApp  {
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>a <see cref="T:System.Single" /></returns>
-        <remarks>To be added</remarks>
+        <summary>
+	   If the child of the button is a <see cref="T:Gtk.Misc"/> 
+	   or <see cref="T:Gtk.Alignment"/>, this property 
+	   can be used to control its horizontal alignment. 
+	</summary>
+        <returns>a <see cref="T:System.Single" />; 
+	  0.0 is left aligned, 1.0 is right aligned.
+	</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Yalign">
@@ -540,9 +548,16 @@ public class ButtonApp  {
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>a <see cref="T:System.Single" /></returns>
-        <remarks>To be added</remarks>
+        <summary>
+	   If the child of the button is a <see cref="T:Gtk.Misc"/> 
+	   or <see cref="T:Gtk.Alignment"/>, this property 
+	   can be used to control its vertical alignment. 
+	</summary>
+        <returns>
+	  a <see cref="T:System.Single" />;
+	  0.0 is top aligned, 1.0 is bottom aligned.
+	</returns>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GetAlignment">
@@ -556,10 +571,10 @@ public class ButtonApp  {
         <Parameter Name="yalign" Type="System.Single&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="xalign">a <see cref="T:System.Single" /></param>
-        <param name="yalign">a <see cref="T:System.Single" /></param>
-        <remarks>To be added</remarks>
+        <summary>Gets the alignment of the child in the button.</summary>
+        <param name="xalign">a <see cref="T:System.Single" /> to put the horizontal alignment in</param>
+        <param name="yalign">a <see cref="T:System.Single" /> to put the vertical alignment in</param>
+        <remarks>A convenience method; shouldn't be </remarks>
       </Docs>
     </Member>
     <Member MemberName="SetAlignment">
@@ -573,10 +588,20 @@ public class ButtonApp  {
         <Parameter Name="yalign" Type="System.Single" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="xalign">a <see cref="T:System.Single" /></param>
-        <param name="yalign">a <see cref="T:System.Single" /></param>
-        <remarks>To be added</remarks>
+        <summary>	   
+	  Sets the alignment of the child. 
+	</summary>
+        <param name="xalign">a <see cref="T:System.Single" />,  
+	  the horizontal position of the child; 0.0 is left aligned, 
+	  1.0 is right aligned.</param>
+        <param name="yalign">a <see cref="T:System.Single" />,
+	  the vertical position of the child; 0.0 is top aligned, 
+	  1.0 is bottom aligned.</param>
+        <remarks>
+	  This has no effect
+	  unless the button's child is a <see cref="T:Gtk.Misc"/> 
+	  or <see cref="T:Gtk.Alignment"/>.
+	</remarks>
       </Docs>
     </Member>
   </Members>
