@@ -141,10 +141,10 @@
         <Parameter Name="ipad_y" Type="System.Int32&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="ipad_x">a <see cref="T:System.Int32" /></param>
-        <param name="ipad_y">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <summary>Gets the internal padding of the child widgets.</summary>
+        <param name="ipad_x">a <see cref="T:System.Int32" />, the horizontal value</param>
+        <param name="ipad_y">a <see cref="T:System.Int32" />, the vertical value</param>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="SetChildSize">
@@ -158,10 +158,13 @@
         <Parameter Name="min_height" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>
+	  Sets the minimum width and height of this button box's
+	  child widgets.
+	</summary>
         <param name="min_width">a <see cref="T:System.Int32" /></param>
         <param name="min_height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="SetChildIpadding">
@@ -175,10 +178,10 @@
         <Parameter Name="ipad_y" Type="System.Int32" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
-        <param name="ipad_x">a <see cref="T:System.Int32" /></param>
-        <param name="ipad_y">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <summary>Sets the internal padding of the child widgets.</summary>
+        <param name="ipad_x">a <see cref="T:System.Int32" />, the horizontal value</param>
+        <param name="ipad_y">a <see cref="T:System.Int32" />, the vertical value</param>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GetChildSize">
@@ -192,10 +195,13 @@
         <Parameter Name="min_height" Type="System.Int32&amp;" RefType="out" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+	<summary>
+	  Sets the minimum width and height of this button box's
+	  child widgets.
+	</summary>
         <param name="min_width">a <see cref="T:System.Int32" /></param>
         <param name="min_height">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Item">
@@ -224,10 +230,10 @@
         <Parameter Name="child" Type="Gtk.Widget" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Returns whether <paramref name="child"/> should appear in a secondary group of children.</summary>
         <param name="child">a <see cref="T:Gtk.Widget" /></param>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="SetChildSecondary">
@@ -241,10 +247,30 @@
         <Parameter Name="is_secondary" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>
+	  Sets whether <paramref name="child"/> should appear in a secondary group of children.
+	  A typical use of a secondary child is the help button in a dialog.
+	</summary>
         <param name="child">a <see cref="T:Gtk.Widget" /></param>
-        <param name="is_secondary">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
+        <param name="is_secondary">a <see cref="T:System.Boolean" />: if 
+	  <see langword="true"/>, the <paramref name="child"/> appears in a secondary group of the button box.
+	</param>
+        <remarks>
+	  This group appears after the other children if the style
+	  is <see cref="T:Gtk.ButtonBox.Start" />, 
+	  <see cref="T:Gtk.ButtonBox.Spread" /> or
+	  <see cref="T:Gtk.ButtonBox.Edge" />, 
+	  and before the the other children if the style
+	  is %GTK_BUTTONBOX_END.
+	  For horizontal button boxes, the definition
+	  of before/after depends on direction of the widget (see
+	  <see cref="T:Gtk.Widget.SetDirection" />). If the style is 
+	  <see cref="T:Gtk.ButtonBox.Start" /> 
+	  or <see cref="T:Gtk.ButtonBox.End" />, then the secondary 
+	  children are aligned at
+	  the other end of the button box from the main children. For the
+	  other styles, they appear immediately next to the main children.
+	</remarks>
       </Docs>
     </Member>
   </Members>
