@@ -472,9 +472,9 @@ void HandleDaySelected (object obj, EventArgs args)
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The selected day as a number between 1 and 31, or 0 to unselect the currently selected day.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ShowWeekNumbers">
@@ -485,9 +485,9 @@ void HandleDaySelected (object obj, EventArgs args)
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>If <see langword="true"/>, week numbers are displayed</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ShowDayNames">
@@ -498,9 +498,9 @@ void HandleDaySelected (object obj, EventArgs args)
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>If <see langword="true"/>, day names are displayed.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ShowHeading">
@@ -511,9 +511,9 @@ void HandleDaySelected (object obj, EventArgs args)
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>If <see langword="true"/>, a heading is displayed</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Month">
@@ -524,9 +524,9 @@ void HandleDaySelected (object obj, EventArgs args)
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The selected month as a number between 0 and 11.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Year">
@@ -537,9 +537,9 @@ void HandleDaySelected (object obj, EventArgs args)
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The selected year.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NoMonthChange">
@@ -550,9 +550,9 @@ void HandleDaySelected (object obj, EventArgs args)
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>If <see langword="true"/>, the selected month can not be changed.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="DisplayOptions">
