@@ -376,7 +376,7 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>A protected constructor. (FIXME: elaborate.)</summary>
+        <summary>Protected constructor.</summary>
         <returns>a <see cref="T:Gtk.CellRenderer" /></returns>
         <remarks />
       </Docs>
@@ -465,8 +465,14 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>
+	  This event is fired when the user cancels the process of 
+	  editing a cell.  
+	</summary>
+        <remarks>
+	  For example, an editable cell renderer could be written to cancel
+	  editing when the user presses Escape.
+	</remarks>
       </Docs>
     </Member>
     <Member MemberName="OnEditingCanceled">
@@ -489,8 +495,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Causes the cell renderer to fire an <see cref="M:Gtk.CellRenderer.EditingCanceled" /> event.</summary>
+        <remarks>
+	  This function is for use only by implementations of cell renderers that need to
+	  notify the client program that an editing process was canceled and the
+	  changes were not committed.
+	</remarks>
       </Docs>
     </Member>
   </Members>
