@@ -1,5 +1,13 @@
 2004-12-31  Shane Landrum  <epicene@pobox.com>
 
+	* en/Gtk/Button.xml
+	* en/Gtk/Calendar.xml
+	* en/Gtk/ButtonBox.xml
+	* en/Gtk/Bindings.xml
+	* en/Gtk/CellRenderer.xml: Added docs.
+
+2004-12-31  Shane Landrum  <epicene@pobox.com>
+
 	* en/Gtk/ArgFlags.xml
 	* en/Gtk/Arg.xml: Added "Do not use" marks.
 	* en/Gtk/Action.xml
